# smines

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  colornames.h  colors.c  colors.h  config.def.h  config.h  difficulties.h  draw.c  draw.h  global.h  help.c  help.h  helper.c  helper.h  layout.txt  logger.c  logger.h  meson.build  minefield.c  minefield.h  morecolor.h  rust-toolchain  rustfmt.toml  smines.c  smines.h  states.h  types.h  undo.c  undo.h  window.c  window.h
include/: bool.h  colornames.h  difficulties.h  display.h  draw.h  game.h  global.h  help.h  helper.h  minefield.h  morecolor.h  timer.h  types.h  undo.h  window.h
src/: colors.rs  constants.rs  display.c  display.rs  draw.c  game.c  game.rs  generate.rs  help.c  helper.c  lib.rs  main.c  main.rs  meson.build  minefield.c  minefield.rs  minesweeper.rs  render.rs  smines.c  term.rs  timer.c  types.rs  types.rs.old  undo.c  window.c
src/minesweeper/: game.rs  minefield.rs  mod.rs  state.rs
src/terminal/: colors.rs  draw.rs  mod.rs
