[package]
name = "smines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
thiserror = "1.0.31"
better-panic = "0.3.0"

clap = { version = "3.2.8", features = ["derive"] }

tui = "0.18.0"
crossterm = "0.23.2"
