[package]
name = "smines"
version = "0.1.0"
authors = ["BBaoVanC <bbaovanc@bbaovanc.com>"]
edition = "2021"
description = "Simple minesweeper in the terminal."
repository = "https://github.com/BBaoVanC/smines"
license = "MIT"
default-run = "smines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
thiserror = "1.0.31"

clap = { version = "3.2.8", features = ["derive"] }

tui = "0.18.0"
crossterm = "0.24.0"

ndarray = "0.15.4"
rand = "0.8.5"
